fixed bottom row spacing issue

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -31,7 +31,7 @@ input.btn {
   margin-bottom: -5.5em;
 }
 .last-row {
-  margin-left: -5.5em;
+  margin-left: -4.5em;
 
   
 }
